# EngineBase

./: .gitignore  CMakeLists.txt  DrawAbleObject.cpp  DrawAbleObject.h  ObjectController.cpp  ObjectController.h  README.md  TextureController.cpp  TextureController.h  main.cpp
Components/: DrawAbleObject.h  PointCheckerObject.cpp  RectangleButton.cpp  RectangleButton.h  ShapesPointChecker.cpp  ShapesPointChecker.h  TestButton.cpp  TestButton.h
Components/BaseFiles/: Button.cpp  Button.h  DrawAbleObject.cpp  DrawAbleObject.h  DropDownMenu.cpp  DropDownMenu.h  PointCheckerObject.h  ShapesPointChecker.cpp
Components/Shapes/: RectangleObject.cpp  RectangleObject.h
Controllers/: EngineBase.cpp  EngineBase.h  ObjectController.cpp  ObjectController.h  TextureController.cpp  TextureController.h
include/: DrawAbleObject.h  EngineBase.cpp  EngineBase.h
sampleClient/: CMakeLists.txt  SampleClient.cpp  SampleClient.h  SampleObject.cpp  SampleObject.h  main.cpp
src/: CollisionChecker.cpp  DrawAble.cpp  DrawAble.h  DrawAbleObjects.cpp  DrawAbleObjects.h  EngineBase.cpp  EngineBase.h  Scene.cpp  Scene.h  SceneController.cpp  SceneController.h  Text.cpp  UpdateController.cpp  UpdateController.h
src/Command/: Command.cpp  CommandEnums.h
src/Components/: HexColorToLoad.cpp  HexColorToLoad.h  Line.cpp  Line.h  RectangleButton.cpp  RectangleButton.h  TextureToLoad.cpp  TextureToLoad.h
src/Components/BaseFiles/: Button.cpp  Button.h  DrawAbleObject.cpp  DrawAbleObject.h  HotKeyManager.cpp  HotKeyManager.h  Object.cpp  Object.h  OnKeyPress.cpp  OnKeyPress.h  ShapesPointChecker.cpp  ShapesPointChecker.h
src/Components/BaseFiles/ObjectFiles/: CollisionManager.cpp  CollisionManager.h  ConnectionManager.cpp  ConnectionManager.h  DragAble.cpp  DragAble.h  DrawAbleObject.cpp  HotKeyManager.cpp  HotKeyManager.h  Object.cpp  Object.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h  VelocityManager.cpp  VelocityManager.h  Visibility.cpp  Visibility.h
src/Controllers/: CommandHandler.cpp  CommandHandler.h  EngineBase.cpp  ObjectController.cpp  ObjectController.h  ObjectKeeper.cpp  ObjectKeeper.h  TextureController.cpp  TextureController.h
src/GraphicsInterface/: IGraphicsLibrary.h  RayLibImplementation.cpp  RayLibImplementation.h
src/Objects/: ClickAble.cpp  ClickAble.h  Collidable.cpp  DragAble.cpp  DragAble.h  DrawAble.cpp  DrawAble.h  SpeedAble.cpp  SpeedAble.h
src/Scene/: DrawAbleController.cpp  DrawAbleController.h  Scene.cpp  Scene.h  SceneController.cpp  SceneController.h
src/include/EngineBase/: ClickAble.h  Collidable.h  CollisionChecker.h  Command.h  DragAble.h  DrawAble.h  DrawAbleObject.h  EngineBase.h  HotKeyManager.h  KeyBoardKeys.h  SpeedAble.h  Text.h
